--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@ html {
   box-sizing: border-box;
   font-family: sans-serif;
   line-height: 1.5;
-  background-color: #fff;
 }
 
 *, *::before, *::after {
@@ -15,30 +14,58 @@ img {
 
 @media only screen and (min-width: 40em) {
 
-}
-
-h1 {
-  font-size: auto;
+  header {
+    flex-direction:row;
+    justify-content: space-between;
+  }
 }
 
 p, nav {
   font-size: 1.125rem;
 }
 
-body {
-  flex-direction: row;
+nav, ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+
 }
 
-ul {
+nav a {
+  text-decoration: none;
   color: #0074d9;
 }
+
+body {
+  margin: 0;
+}
+
 
 .banner {
   border-color: #e2e2e2;
 }
 
 header {
-display: flex;
+  display: flex;
   flex-direction: row;
-  justify-content: space-after;
+  background-color: #e2e2e2;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header h1 {
+  margin: 0 auto;
+}
+
+header img {
+  margin: 0;
+}
+
+header p {
+  margin: 0;
+}
+
+a:hover {
+  border-color: #0074d9;
+  background-color: #fff;
 }
